--- a/style.css
+++ b/style.css
@@ -28,16 +28,17 @@ body {
   border-radius: 50%;
   border-top-color: #09f;
   border-bottom-color: #09f;
+  animation: rotate 5s linear infinite;
 }
 
-// @keyframes rotate {
-//   0% {
-//     transform: scale(1) rotate(360deg);
-//   }
-//   50% {
-//     transform: scale(0.5) rotate(-360deg);
-//   }
-//   100% {
-//     transform: scale(1) rotate(360deg);
-//   }
-// }
+@keyframes rotate {
+  0% {
+    transform: scale(1) rotate(360deg);
+  }
+  50% {
+    transform: scale(0.5) rotate(-360deg);
+  }
+  100% {
+    transform: scale(1) rotate(360deg);
+  }
+}
